--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "react": "^18.3.1",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-oidc-context": "^3.2.0",
     "react-responsive": "^10.0.0",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.1",
     "@types/toastify-js": "^1.12.3",
     "@vitejs/plugin-react": "^4.3.3",
